[M]Modifique un enlace, que me habia olvidado de poner

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -19,7 +19,7 @@
       <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Basketball Shoes</a>
+              <a class="navbar-brand" href="../index.html">Basketball Shoes</a>
                 <button
                     class="navbar-toggler"
                     type="button"
