--- a/index.html
+++ b/index.html
@@ -54,20 +54,14 @@
                 </div>
             </nav>
         </header>
-
-        <section class="container my-4">
+        <section class="container px-0">
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                    <img src="./assets/publicidad1.avif" class="img-fluid">
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                    <img src="./assets/publicidad2.jpg" class="img-fluid"> 
-                </div>
+              <div class="col-12 px-0">
+                <img src="./assets/publicidad.jpg" class="img-fluid rounded-4 shadow" alt="Publicidad">
+              </div>
             </div>
         </section>
-
         <p class="text-center destacado">LO MÁS VENDIDO</p>
-
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
